# leafsync

./: .gitignore  Cargo.toml  LICENSE  README.md  cube.html
assets/: README.txt
src/: chunk.rs  identity.rs  main.rs  merkle.rs  net.rs  protocol.rs  resume.rs  status.rs  syncer.rs  trust.rs  watch.rs  web.rs
test_client/: boy.txt  file.txt  gaurav.txt  hello.txt  new.txt  readme.txt
test_server/: boy.txt  hello.txt  hey.txt  new.txt  readme.txt  sakshi.txt  test.md
